<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/activity_como_jogar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_splash_screen"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.gocode.detetive.activites.ComoJogar">


        <TextView
            android:id="@+id/tvComoJogar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="@dimen/margin_top_tv_como_jogar"
            android:text="@string/como_jogar_activity_text"
            android:textColor="@android:color/white"
            android:textSize="@dimen/como_jogar_activity_text_size" />

        <TextView
            android:id="@+id/tvExplicacaoP1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tvComoJogar"
            android:layout_marginBottom="@dimen/text_size_and_margin_bottom_tvs_como_jogar"
            android:layout_marginTop="@dimen/margin_top_tv_como_jogar"
            android:text="@string/explicacao_p1"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_and_margin_bottom_tvs_como_jogar" />

        <TextView
            android:id="@+id/tvExplicacaoP2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tvExplicacaoP1"
            android:layout_marginBottom="@dimen/text_size_and_margin_bottom_tvs_como_jogar"
            android:text="@string/explicacao_p2"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_and_margin_bottom_tvs_como_jogar" />

        <TextView
            android:id="@+id/tvExplicacaoP3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tvExplicacaoP2"
            android:layout_marginBottom="@dimen/text_size_and_margin_bottom_tvs_como_jogar"
            android:text="@string/explicacao_p3"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_and_margin_bottom_tvs_como_jogar" />

        <TextView
            android:id="@+id/tvExplicacaoP4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tvExplicacaoP3"
            android:text="@string/explicacao_p4"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_and_margin_bottom_tvs_como_jogar" />

    </RelativeLayout>
</ScrollView>