<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.gocode.detetive.activites.MainActivity">

    <Button
        android:id="@+id/btPegarPapel"
        android:layout_width="@dimen/bt_layout_width"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/margin_bottom_button_sortear"
        android:background="@drawable/roundedbutton"
        android:text="@string/sortear" />


    <Button
        android:id="@+id/btEmbaralhar"
        android:layout_width="@dimen/bt_layout_width"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/margin_bottom_button_embaralhar"
        android:background="@drawable/roundedbutton"
        android:text="@string/embaralhar" />

    <EditText
        android:id="@+id/etJogadores"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btPegarPapel"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="@dimen/et_margin_bottom"
        android:ems="10"
        android:hint="@string/et_hint"
        android:inputType="number"
        android:textColor="@color/et_text_color"
        android:textColorHint="@color/et_color_hint" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/iv_wigth_and_heigth"
        android:layout_height="@dimen/iv_wigth_and_heigth"
        android:layout_above="@+id/etJogadores"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/iv_margin_bottom"
        app:srcCompat="@drawable/ic_detective" />

    <Button
        android:id="@+id/btComoJogar"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/btEmbaralhar"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/btEmbaralhar"
        android:text="@string/como_jogar"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:textColor="@android:color/white" />
</RelativeLayout>
